--- a/index.html
+++ b/index.html
@@ -11,10 +11,27 @@
             padding: 0;
         }
 
+        ::-moz-selection {
+            background: lightblue;
+            color: rgb(13, 6, 43);
+        }
+
+        ::selection {
+            background: lightblue;
+            color: rgb(13, 6, 43);
+        }
+
+        img {
+            width: 95px;
+            height: 95px;
+            border-radius: 50%;
+        }
+
         header {
             color: rgb(13, 6, 43);
             padding: 30px;
             text-align: center;
+            letter-spacing: 0.04rem;
         }
 
         header p {
@@ -36,10 +53,15 @@
             margin: 40px 0 0 0;
             padding: 0;
             border-top: 1px solid gray;
+
         }
 
         ul li {
             padding: 10px;
+        }
+
+        ul li img {
+            width: 20px;
         }
 
         a {
@@ -78,11 +100,7 @@
             padding: 10px;
         }
 
-        img {
-            width: 95px;
-            height: 95px;
-            border-radius: 50%;
-        }
+        
     </style>
 </head>
 
@@ -102,16 +120,21 @@
 
         <header>
             <h1>MAHMOUD BAKHEET</h1>
-            <p>Larvel Fullstack developer.</p>
+            <!-- <p>
+                PHP and Laravel backend developer with some knowledge of front-end technologies, specializing in MIS analysis and IT
+                project management.
+            </p> -->
+            <p>Larvel Fullstack developer & UI UX Designer.</p>
         </header>
 
         <a href="mailto:mahmoud-bakheet@outlook.com">mahmoud-bakheet@outlook.com</a>
         <a href="tel:+966571779327">00966571779327</a>
 
         <ul>
-            <li> <a href="https://github.com/MahmoudBakheett/"> GitHub </a> </li>
-            <li> <a href="https://github.com/MahmoudBakheett/"> X </a> </li>
-            <li> <a href="https://github.com/MahmoudBakheett/"> youtube </a> </li>
+            <li> <a href="https://github.com/MahmoudBakheett/"> <img src="/icons/github.svg" alt=""> </a> </li>
+            <li> <a href="https://x.com/MahmoudBakheet/"> <img src="/icons/twitter.svg" alt=""> </a> </li>
+            <li> <a href="https://www.linkedin.com/in/khunfoshary/"> <img src="/icons/linkedin.svg" alt=""> </a> </li>
+            <li> <a href="https://www.youtube.com/@mahmoud-bakheet/"> <img src="/icons/youtube.svg" alt=""> </a> </li>
         </ul>
     </div>
 </body>
