--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         }
         
         header p {
-            color: rgb(71, 71, 71)
+            color: rgb(71, 71, 71);
+            max-width: 400px
         }
 
         .content {
