Update bio letter spacing

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         
         header p {
             color: rgb(71, 71, 71);
-            max-width: 400px
+            max-width: 400px;
+            letter-spacing: auto;
         }
 
         .content {
