--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="MAHMOUD BAKHEET, Laravel, MIS, IT project management">
+    <meta name="description" content="PHP and Laravel backend developer with some knowledge of front-end technologies, specializing in MIS analysis and IT project management">
+    <meta property="og:title" content="Triples - شركة خدمة الحل الذكي">
+    <meta property="og:image" content="https://mahmoudbakheett.github.io/mahmoud-bakheet-main.jpeg">
+    <link rel="canonical" href="https://mahmoudbakheett.github.io">
+    
+    <meta property="og:description" content="Smart Solution Service">
+    <meta property="og:url" content="https://triples-sa.com/">
+
+    <meta name="robots" content="index, follow">
     <title>Mahmoud Bakheet</title>
+
+
+    <script type="application/ld+json"> { "@context": "https://schema.org", "@type": "WebPage", "headline": "MAHMOUD BAKHEET - Laravel Developer", "description": "PHP and Laravel backend developer with some knowledge of front-end technologies, MIS analysis and IT project management", "url": "https://mahmoudbakheett.github.io" }
+
     <style>
         body {
             margin: 0;
@@ -138,6 +152,7 @@
             <li> <a href="https://www.youtube.com/@mahmoud-bakheet/"> <img src="/icons/youtube.svg" alt=""> </a> </li>
         </ul>
     </div>
+
 </body>
 
 </html>
