--- a/index.html
+++ b/index.html
@@ -6,18 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="MAHMOUD BAKHEET, Laravel, MIS, IT project management">
     <meta name="description" content="PHP and Laravel backend developer with some knowledge of front-end technologies, specializing in MIS analysis and IT project management">
-    <meta property="og:title" content="Triples - شركة خدمة الحل الذكي">
+    <meta property="og:title" content="MAHMOUD BAKHEET ">
     <meta property="og:image" content="https://mahmoudbakheett.github.io/mahmoud-bakheet-main.jpeg">
     <link rel="canonical" href="https://mahmoudbakheett.github.io">
     
-    <meta property="og:description" content="Smart Solution Service">
-    <meta property="og:url" content="https://triples-sa.com/">
+    <meta property="og:description" content="PHP and Laravel backend developer with some knowledge of front-end technologies, specializing in MIS analysis and IT project management">
 
     <meta name="robots" content="index, follow">
     <title>Mahmoud Bakheet</title>
 
 
-    <script type="application/ld+json"> { "@context": "https://schema.org", "@type": "WebPage", "headline": "MAHMOUD BAKHEET - Laravel Developer", "description": "PHP and Laravel backend developer with some knowledge of front-end technologies, MIS analysis and IT project management", "url": "https://mahmoudbakheett.github.io" }
+    <script type="application/ld+json"> { "@context": "https://schema.org", "@type": "WebPage", "headline": "MAHMOUD BAKHEET - Laravel Developer", "description": "PHP and Laravel backend developer with some knowledge of front-end technologies, MIS analysis and IT project management", "url": "https://mahmoudbakheett.github.io" } </script>
 
     <style>
         body {
